[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 60.0
margin_top = 100.0
margin_right = 256.0
margin_bottom = 225.0
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Button" type="Button" parent="."]
margin_left = 60.0
margin_top = 30.0
margin_right = 252.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( -775, -158 )
text = "Lista preenchida"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 776.0
margin_top = 120.0
margin_right = 968.0
margin_bottom = 245.0
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 775.0
margin_top = 49.0
margin_right = 967.0
margin_bottom = 111.0

[node name="Button2" type="Button" parent="."]
margin_left = 581.0
margin_top = 50.0
margin_right = 773.0
margin_bottom = 111.0
text = "Confirme sua lista"

[node name="Button3" type="Button" parent="."]
margin_left = 65.0
margin_top = 510.0
margin_right = 257.0
margin_bottom = 566.0
text = "Valor da compra"

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 770.0
margin_top = 10.0
margin_right = 962.0
margin_bottom = 66.0
text = "Sua lista do mercado:"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 60.0
margin_top = 450.0
margin_right = 252.0
margin_bottom = 511.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 775.0
margin_top = 440.0
margin_right = 967.0
margin_bottom = 506.0

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 770.0
margin_top = 389.0
margin_right = 967.0
margin_bottom = 461.0
text = "Quanto vocÃª gostaria de pagar:"
align = 1
valign = 1

[node name="Button4" type="Button" parent="."]
margin_left = 581.0
margin_top = 441.0
margin_right = 773.0
margin_bottom = 505.0
text = "Confrimar seu valor"

[node name="Label4" type="Label" parent="."]
margin_left = 775.0
margin_top = 520.0
margin_right = 967.0
margin_bottom = 587.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
